--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -16,3 +16,4 @@
     <meta property="og:title" content="{{ page.title }}" />
     <meta property="twitter:title" content="{{ page.title }}" />
     {% endif %}
+    <meta property="article:publisher" content="https://www.facebook.com/groups/jomwebjohor" />
