--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -17,3 +17,6 @@
     <meta property="twitter:title" content="{{ page.title }}" />
     {% endif %}
     <meta property="article:publisher" content="https://www.facebook.com/groups/jomwebjohor" />
+    {% if page.url == "/index.html" %}
+    <meta property="og:image" content="http://i.imgur.com/Z9VZUXl.png" />
+    {% endif %}
